force-app/main/default/objects/Account/fields/Maintains_Commercial_Auto__c.field-meta.xml
<CustomField>
    <fullName>Maintains_Commercial_Auto__c</fullName>
    <description>Checks if a specific coverage is in-force. Used in drawloop</description>
    <formula>AND(
NOT(INCLUDES (Coverages__c, &quot;Commercial Auto&quot;)),
Current_Client__c =true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintains Commercial Auto</label>
    <type>Checkbox</type>
</CustomField>