force-app/main/default/objects/Account/fields/Maintains_Crime__c.field-meta.xml
<CustomField>
    <fullName>Maintains_Crime__c</fullName>
    <description>Checks if a specific coverage is in-force. Used in drawloop</description>
    <formula>AND(
NOT(INCLUDES (Coverages__c, &quot;Commercial Crime&quot;)),
Current_Client__c =true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintains Crime</label>
    <type>Checkbox</type>
</CustomField>