force-app/main/default/objects/Account/fields/Maintains_Cyber_Liability__c.field-meta.xml
<CustomField>
    <fullName>Maintains_Cyber_Liability__c</fullName>
    <description>Checks if a specific coverage is in-force. Used in drawloop</description>
    <formula>AND(
NOT(INCLUDES ( Coverages__c , &quot;Cyber Liability&quot;)),
Current_Client__c =true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintains Cyber Liability</label>
    <type>Checkbox</type>
</CustomField>