force-app/main/default/objects/Account/fields/Maintains_Directors_Officers__c.field-meta.xml
<CustomField>
    <fullName>Maintains_Directors_Officers__c</fullName>
    <description>Checks if a specific coverage is in-force. Used in drawloop</description>
    <formula>AND(
NOT(INCLUDES (Coverages__c, &quot;Directors &amp; Officers&quot;)),
Current_Client__c =true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintains Directors &amp; Officers</label>
    <type>Checkbox</type>
</CustomField>