force-app/main/default/objects/Account/fields/Maintains_EPLI__c.field-meta.xml
<CustomField>
    <fullName>Maintains_EPLI__c</fullName>
    <description>Checks if a specific coverage is in-force. Used in drawloop</description>
    <formula>AND(
NOT(INCLUDES ( Coverages__c, &quot;Employment Practices Liability Insurance&quot;)),
Current_Client__c =true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintains EPLI</label>
    <type>Checkbox</type>
</CustomField>