force-app/main/default/objects/Account/fields/Maintains_Errors_Omissions__c.field-meta.xml
<CustomField>
    <fullName>Maintains_Errors_Omissions__c</fullName>
    <description>Checks if a specific coverage is in-force. Used in drawloop</description>
    <formula>AND(
NOT(INCLUDES ( Coverages__c, &quot;Errors &amp; Omissions&quot;)),
Current_Client__c =true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintains Errors &amp; Omissions</label>
    <type>Checkbox</type>
</CustomField>