force-app/main/default/objects/Account/fields/Maintains_Fiduciary__c.field-meta.xml
<CustomField>
    <fullName>Maintains_Fiduciary__c</fullName>
    <description>Checks if a specific coverage is in-force. Used in drawloop</description>
    <formula>AND(
NOT(INCLUDES (Coverages__c, &quot;Fiduciary Liability&quot;)),
Current_Client__c =true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintains Fiduciary</label>
    <type>Checkbox</type>
</CustomField>