force-app/main/default/objects/Account/fields/Maintains_HNOA__c.field-meta.xml
<CustomField>
    <fullName>Maintains_HNOA__c</fullName>
    <description>Checks if a specific coverage is in-force. Used in drawloop</description>
    <formula>AND(
NOT(INCLUDES (Coverages__c, &quot;Hired &amp; Non Owned Auto&quot;)),
Current_Client__c =true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintains HNOA</label>
    <type>Checkbox</type>
</CustomField>