force-app/main/default/objects/Account/fields/Maintains_Intellectual_Property__c.field-meta.xml
<CustomField>
    <fullName>Maintains_Intellectual_Property__c</fullName>
    <description>Checks if a specific coverage is in-force. Used in drawloop</description>
    <formula>AND(
NOT(INCLUDES (Coverages__c, &quot;Intellectual Property&quot;)),
Current_Client__c =true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintains Intellectual Property</label>
    <type>Checkbox</type>
</CustomField>