force-app/main/default/objects/Account/fields/Maintains_Key_Man__c.field-meta.xml
<CustomField>
    <fullName>Maintains_Key_Man__c</fullName>
    <description>Checks if a specific coverage is in-force. Used in drawloop</description>
    <formula>AND(
NOT(INCLUDES (Coverages__c, &quot;Contract Frustration Insurance&quot;)),
Current_Client__c =true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintains Contract Frustration Insurance</label>
    <type>Checkbox</type>
</CustomField>