force-app/main/default/objects/Account/fields/Maintains_Product_Liability__c.field-meta.xml
<CustomField>
    <fullName>Maintains_Product_Liability__c</fullName>
    <formula>AND(
NOT(INCLUDES (Coverages__c, &quot;Product Liability&quot;)),
Current_Client__c =true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintains Product Liability</label>
    <type>Checkbox</type>
</CustomField>