force-app/main/default/objects/Account/fields/Maintains_Workers_Comp__c.field-meta.xml
<CustomField>
    <fullName>Maintains_Workers_Comp__c</fullName>
    <description>Checks if a specific coverage is in-force. Used in drawloop</description>
    <formula>AND(
NOT(INCLUDES (  Coverages__c , &quot;Worker&apos;s Compensation&quot;)),
Current_Client__c =true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintains Workers Comp</label>
    <type>Checkbox</type>
</CustomField>