force-app/main/default/objects/Account/fields/Marked_for_Delete__c.field-meta.xml
<CustomField>
    <fullName>Marked_for_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked for Delete</label>
    <type>Checkbox</type>
</CustomField>