force-app/main/default/objects/Account/fields/Match_Status_Moodys__c.field-meta.xml
<CustomField>
    <fullName>Match_Status_Moodys__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Match Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>