force-app/main/default/objects/Account/fields/Melohn_Intro__c.field-meta.xml
<CustomField>
    <fullName>Melohn_Intro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Melohn Intro</label>
    <type>Checkbox</type>
</CustomField>