force-app/main/default/objects/Account/fields/Most_Recent_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Renewal__c</fullName>
    <description>The most recent effective date of insured&apos;s policies</description>
    <label>Most Recently Bound Policy</label>
    <summarizedField>Opportunity.Effective_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Proposal Approved/Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>