force-app/main/default/objects/Account/fields/Multiple_Locations__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Locations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the insured have more than one address?</description>
    <inlineHelpText>This field will be checked if the insured has added more than one address on app.fs on their most recent application</inlineHelpText>
    <label>Multiple Locations?</label>
    <type>Checkbox</type>
</CustomField>