force-app/main/default/objects/Account/fields/NAICS_Code_IssuingCompanies__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code_IssuingCompanies__c</fullName>
    <description>NAICS Code field for Issuing Companies</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NAICS Code (Issuing Companies)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>