force-app/main/default/objects/Account/fields/NAICS_Code_New__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code_New__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NAICS Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>