force-app/main/default/objects/Account/fields/NLP__NAICS__c.field-meta.xml
<CustomField>
    <fullName>NLP__NAICS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NAICS #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>