force-app/main/default/objects/Account/fields/NQ_ID__c.field-meta.xml
<CustomField>
    <fullName>NQ_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NQ ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>