force-app/main/default/objects/Account/fields/NQ_ID_ERROR__c.field-meta.xml
<CustomField>
    <fullName>NQ_ID_ERROR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NQ_ID_ERROR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>