force-app/main/default/objects/Account/fields/Number_of_Won_Opps__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Won_Opps__c</fullName>
    <label>Number of Won Opps</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Proposal Approved/Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>