force-app/main/default/objects/Account/fields/OFAC_Check_Completed__c.field-meta.xml
<CustomField>
    <fullName>OFAC_Check_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OFAC Check Completed</label>
    <type>Checkbox</type>
</CustomField>