force-app/main/default/objects/Account/fields/Offering_through_PEO__c.field-meta.xml
<CustomField>
    <fullName>Offering_through_PEO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Offering through PEO?</label>
    <type>TextArea</type>
</CustomField>