force-app/main/default/objects/Account/fields/Opps_in_Addl_Info_Needed__c.field-meta.xml
<CustomField>
    <fullName>Opps_in_Addl_Info_Needed__c</fullName>
    <label>Opps in Add&apos;l Info Needed</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Additional Info Needed</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>