force-app/main/default/objects/Account/fields/Opps_in_Proposal_Received__c.field-meta.xml
<CustomField>
    <fullName>Opps_in_Proposal_Received__c</fullName>
    <label>Opps in Proposal Received</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Proposal Received</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>