force-app/main/default/objects/Account/fields/Page_Views_All_Time__c.field-meta.xml
<CustomField>
    <fullName>Page_Views_All_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Page Views (all time)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>