force-app/main/default/objects/Account/fields/pbk__Active_Investors__c.field-meta.xml
<CustomField>
    <fullName>pbk__Active_Investors__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PB Active Investors</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>