force-app/main/default/objects/Account/fields/pbk__AUM__c.field-meta.xml
<CustomField>
    <fullName>pbk__AUM__c</fullName>
    <label>PB AUM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>