force-app/main/default/objects/Account/fields/pbk__Average_Volume__c.field-meta.xml
<CustomField>
    <fullName>pbk__Average_Volume__c</fullName>
    <label>PB Average Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>