force-app/main/default/objects/Account/fields/pbk__Employees__c.field-meta.xml
<CustomField>
    <fullName>pbk__Employees__c</fullName>
    <label>PB Employees</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>