force-app/main/default/objects/Account/fields/pbk__Financing_Status__c.field-meta.xml
<CustomField>
    <fullName>pbk__Financing_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PB Financing Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>