force-app/main/default/objects/Account/fields/pbk__High_52wk__c.field-meta.xml
<CustomField>
    <fullName>pbk__High_52wk__c</fullName>
    <label>PB 52 Week High</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>