force-app/main/default/objects/Account/fields/pbk__Investor_Status__c.field-meta.xml
<CustomField>
    <fullName>pbk__Investor_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PB Investor Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>