force-app/main/default/objects/Account/fields/pbk__Last_Inv_Lead_Partner__c.field-meta.xml
<CustomField>
    <fullName>pbk__Last_Inv_Lead_Partner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PB Last Inv Lead Partner</label>
    <length>200</length>
    <type>Text</type>
</CustomField>