force-app/main/default/objects/Account/fields/pbk__Last_Inv_Lead_Partner_Title__c.field-meta.xml
<CustomField>
    <fullName>pbk__Last_Inv_Lead_Partner_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PB Last Inv Lead Partner Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>