force-app/main/default/objects/Account/fields/pbk__Last_Round_Status__c.field-meta.xml
<CustomField>
    <fullName>pbk__Last_Round_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PB Last Round Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>