force-app/main/default/objects/Account/fields/pbk__Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>pbk__Last_Sync_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PB Last Sync Date</label>
    <type>DateTime</type>
</CustomField>