force-app/main/default/objects/Account/fields/pbk__LTM_Dividend_Yield__c.field-meta.xml
<CustomField>
    <fullName>pbk__LTM_Dividend_Yield__c</fullName>
    <label>PB LTM Dividend Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>