force-app/main/default/objects/Account/fields/pbk__LTM_EBIT__c.field-meta.xml
<CustomField>
    <fullName>pbk__LTM_EBIT__c</fullName>
    <label>PB LTM EBIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>