force-app/main/default/objects/Account/fields/pbk__LTM_EPS__c.field-meta.xml
<CustomField>
    <fullName>pbk__LTM_EPS__c</fullName>
    <inlineHelpText>Last Twelve Month Earnings Per Share</inlineHelpText>
    <label>PB LTM EPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>