force-app/main/default/objects/Account/fields/pbk__LTM_Net_Income__c.field-meta.xml
<CustomField>
    <fullName>pbk__LTM_Net_Income__c</fullName>
    <label>PB LTM Net Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>