force-app/main/default/objects/Account/fields/pbk__LTM_Number_Of_Investments__c.field-meta.xml
<CustomField>
    <fullName>pbk__LTM_Number_Of_Investments__c</fullName>
    <inlineHelpText>Number of Investments made in the Last 12 Months</inlineHelpText>
    <label>PB LTM No. of Investments</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>