force-app/main/default/objects/Account/fields/pbk__LTM_P_E__c.field-meta.xml
<CustomField>
    <fullName>pbk__LTM_P_E__c</fullName>
    <inlineHelpText>Last Twelve Month Price/Earnings</inlineHelpText>
    <label>PB LTM P/E</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>