force-app/main/default/objects/Account/fields/pbk__Number_Of_Active_Investments__c.field-meta.xml
<CustomField>
    <fullName>pbk__Number_Of_Active_Investments__c</fullName>
    <inlineHelpText>Number of Active Investments</inlineHelpText>
    <label>PB No. of Active Investments</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>