force-app/main/default/objects/Account/fields/pbk__Ownership_Status__c.field-meta.xml
<CustomField>
    <fullName>pbk__Ownership_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PB Ownership Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>