force-app/main/default/objects/Account/fields/pbk__PitchBook_Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>pbk__PitchBook_Industry_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PB Industry Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>