force-app/main/default/objects/Account/fields/pbk__PitchBook_Link__c.field-meta.xml
<CustomField>
    <fullName>pbk__PitchBook_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PitchBook Link</label>
    <type>Url</type>
</CustomField>