force-app/main/default/objects/Account/fields/pbk__PitchBook_Type__c.field-meta.xml
<CustomField>
    <fullName>pbk__PitchBook_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PB Firm Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>