force-app/main/default/objects/Account/fields/pbk__Preferred_EBITDA__c.field-meta.xml
<CustomField>
    <fullName>pbk__Preferred_EBITDA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PB Preferred EBITDA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>