force-app/main/default/objects/Account/fields/pbk__Preferred_Geographies__c.field-meta.xml
<CustomField>
    <fullName>pbk__Preferred_Geographies__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PB Preferred Geographies</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>