force-app/main/default/objects/Account/fields/pbk__Preferred_Investment_Types__c.field-meta.xml
<CustomField>
    <fullName>pbk__Preferred_Investment_Types__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PB Preferred Investment Types</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>